--- a/Models/SpeechLM/ST2S/2024.12.22_KALL-E.md
+++ b/Models/SpeechLM/ST2S/2024.12.22_KALL-E.md
@@ -307,16 +307,18 @@ During inference, ***KALL-E*** is capable of both unconditional and conditional 
 For unconditional TTS, ***KALL-E*** autoregressively generates the target speech distribution directly from the provided input text.
 Thanks to the reparameterization technique used in the sampling process, ***KALL-E*** can produce diverse speech outputs with varying speaker timbres and speaking styles for the same input text when performing batch inference.
 
-</td><td>
-
-</td></tr>
-<tr><td>
-
-For conditional TTS, such as in the case of zero-shot TTS, ***KALL-E*** achieves this through an in-context learning mechanism, similar to VALL-E and MELLE.
+For conditional TTS, such as in the case of zero-shot TTS, ***KALL-E*** achieves this through an in-context learning mechanism, similar to **VALL-E** and **MELLE**.
 Specifically, given the text content $x$ for synthesis, along with the text transcription $\hat{x}$ and speech distribution $\hat{z}$ of acoustic prompt, ***KALL-E*** autoregressively generates the target speech distribution $z$ of the corresponding content while preserving the acoustic characteristics of the prompt speech.
 This process is formulated by maximizing the likelihood probability: $p(z|\hat{x},x,\hat{z};\theta)$.
 
 </td><td>
+
+在推理时, ***KALL-E*** 能够处理非条件化和条件化的文本转语音合成.
+- 非条件化 TTS: ***KALL-E*** 直接从提供的输入文本生成目标语音分布.
+  由于采样时使用重参数化技术, 使用批量推理时, ***KALL-E*** 可以对相同的输入文本生成具有不同说话人音色和说话风格的多样化输出.
+- 条件化 TTS (如零样本 TTS): ***KALL-E*** 通过类似 **VALL-E** 和 **MELLE** 的上下文学习机制来实现.
+  具体来说, 给定待合成的文本内容 $x$, 以及声学提示的语音分布 $\hat{z}$ 和文本转录 $\hat{x}$, ***KALL-E*** 以自回归方式生成对应内容的目标语音分布 $z$, 同时保留提示语音的声学特征.
+  这一过程可以被形式化为最大化似然概率: $p(z|\hat{x},x,\hat{z};\theta)$.
 
 </td></tr></table>
 
@@ -356,14 +358,14 @@ The WaveVAE model is trained with a total batch size of 64 for 2,000k steps, whi
 To assess the performance of ***KALL-E***, we compare it with the open-source implementation of several popular zero-shot TTS models.
 Note that the training data used for these models might be different.
 
-- YourTTS[^yourtts]: A non-autoregressive TTS model based on VITS, enhanced with a pre-t
+- **YourTTS**[^yourtts]: A non-autoregressive TTS model based on VITS, enhanced with a pre-t
 - rained speaker encoder to improve zero-shot TTS capabilities.
 We use the released checkpoint [Github](https://github.com/Edresson/YourTTS).
-- VALL-E[^valle]: A codec language model approach for zero-shot TTS synthesis that uses audio codec codes as intermediate representations.
+- **VALL-E**[^valle]: A codec language model approach for zero-shot TTS synthesis that uses audio codec codes as intermediate representations.
 We use the open-source checkpoint [Github](https://github.com/open-mmlab/Amphion/tree/main/egs/tts/VALLE) from Amphion [^amphion].
-- NaturalSpeech 2[^ns2]: A zero-shot TTS system that incorporates a neural audio codec with continuous latent vectors and a latent diffusion model for non-autoregressive speech generation.
+- **NaturalSpeech2**[^ns2]: A zero-shot TTS system that incorporates a neural audio codec with continuous latent vectors and a latent diffusion model for non-autoregressive speech generation.
 We use the open-source checkpoint [Github](https://github.com/open-mmlab/Amphion/tree/main/egs/tts/NaturalSpeech2) from Amphion [^amphion].
-- CosyVoice[^cosyvoice]: a scalable zero-shot speech synthesis system that integrates language and flow-matching models.
+- **CosyVoice**[^cosyvoice]: a scalable zero-shot speech synthesis system that integrates language and flow-matching models.
 We use their released checkpoint [Github](https://github.com/FunAudioLLM/CosyVoice).
 
 </td><td>
@@ -378,9 +380,9 @@ We employ subjective and objective evaluations to assess the performance of synt
 For subjective evaluation, we use the Mean Opinion Score (MOS) to evaluate the naturalness of the synthetic speech, Similarity Mean Opinion Score (SMOS) to assess speaker similarity between the synthetic and prompt speech, Comparative Mean Opinion Scores (CMOS) for emotion or accent preference according to reference speech.
 Each evaluation has at least 10 participants.
 The rating scale is as follows: bad = 1, poor = 2, fair = 3, good = 4, great = 5, with half-point increments.
-For objective evaluation, we follow Seed-TTS [Github](https://github.com/BytedanceSpeech/seed-tts-eval/tree/main) [^seedtts] and measure word error rate (WER) and speaker similarity (SIM).
-Specifically, we use Whisper-large-v3[^whisper] to compute the WER of synthetic speech.
-For SIM, we employ WavLM-large[^wavlm] fine-tuned on a speaker verification task to extract speaker embeddings and calculate the cosine similarity between the synthetic speech and reference clips.
+For objective evaluation, we follow **Seed-TTS**[^seedtts] [Github](https://github.com/BytedanceSpeech/seed-tts-eval/tree/main) and measure word error rate (WER) and speaker similarity (SIM).
+Specifically, we use **Whisper-Large-V3**[^whisper] to compute the WER of synthetic speech.
+For SIM, we employ **WavLM-Large**[^wavlm] fine-tuned on a speaker verification task to extract speaker embeddings and calculate the cosine similarity between the synthetic speech and reference clips.
 
 </td><td>
 
@@ -440,7 +442,7 @@ First, like other AR TTS systems, it still faces challenges in synthesis robustn
 Specifically, some words may be unclear, missed, or duplicated in the generated speech.
 Second, the inference efficiency can be improved.
 Although the current system operates at a frame rate of 100 Hz, reducing the frame rate to a lower frame rate, such as 12.5 Hz, could improve computational efficiency.
-Lastly, the LibriTTS corpus used for training is relatively small, and the performance of ***KALL-E*** could benefit from leveraging larger datasets, such as LibriLight[^librilight], WenetSpeech4TTS[^wenetspeech4tts] or Emilia[^Emilia].
+Lastly, the LibriTTS corpus used for training is relatively small, and the performance of ***KALL-E*** could benefit from leveraging larger datasets, such as **LibriLight**[^librilight], **WenetSpeech4TTS**[^wenetspeech4tts] or **Emilia**[^Emilia].
 
 </td><td>
 
