增加 Slamming Sec.02

--- a/Models/SpeechLM/2025.02.19_Slamming.md
+++ b/Models/SpeechLM/2025.02.19_Slamming.md
@@ -40,9 +40,9 @@ See code, data, models, samples - https://pages.cs.huji.ac.il/adiyoss-lab/slammi
 
 Speech Language Models (SLMs) have gained significant interest from researchers~\cite{peng2024survey, cui2024recent, ji2024wavchat, latif2023sparks}, demonstrating remarkable performance in traditional speech tasks~\cite{valle, elmakies2025unsupervisedspeechsegmentationgeneral}, diverse generative applications~\cite{yang2023uniaudio, yang2024uniaudio}, and reasoning over speech and audio signals~\cite{salmonn, qwen_audio}.
 
-SLMs can generally be classified into two main categories: (i) generative speech \ac{LMs} (which can also incorporate text) and (ii) speech-aware \ac{LMs}.
-The first category follows a similar pre-training approach to text-based \ac{LLMs}, directly maximizing the likelihood of speech considering both input and output, typically by representing audio as a sequence of discrete tokens.
-The second category consists of pre-trained text \ac{LMs} adapted to process speech inputs.
+SLMs can generally be classified into two main categories: (i) generative speech LMs (which can also incorporate text) and (ii) speech-aware LMs.
+The first category follows a similar pre-training approach to text-based LLMs, directly maximizing the likelihood of speech considering both input and output, typically by representing audio as a sequence of discrete tokens.
+The second category consists of pre-trained text LMs adapted to process speech inputs.
 In this work, we focus on the first.
 
 Training high-quality SLMs can be highly resource intensive~\cite{twist, cuervo2024scaling, scaling_interleaving, spiritlm, defossez2024moshi}.
@@ -79,11 +79,45 @@ We open-source all code, models, training recipes, and synthetic datasets.
 
 <table><tr><td width="50%">
 
+**Efficient training.**
+
+Enhancing the efficiency of neural network training has been extensively studied~\citep{shen2023efficient}.
+\citet{hajimolahoseini2023swiftlearn, wang2024greats} examined the impact of data selection on LLM training and introduced efficient data selection methods.
+\citet{muhamed2024grass} proposed using structured sparse gradients to enhance compute efficiency in LLM training, while \citet{rawat2024little} explored the potential of leveraging smaller language models to improve the training efficiency of larger LLMs.
+\citet{lv2024scalable} investigated the use of low-dimensional projections for attention parameters to enhance training efficiency.
+Meanwhile, \citet{neiterman2024layerdropback} proposed applying LayerDrop as a technique to optimise neural network training.
+
+More closely related to our work, \citet{li2023flm} propose a training strategy for developing LLMs within a $100k\$$ budget.
+\citet{warner2024modernbert} introduce ModernBERT, an efficient training pipeline for optimising BERT models, while \citet{izsak2021train} outline a method for training a BERT model in $24$ hours using $8$ GPUs.
+The most relevant work to ours is Cramming \cite{geiping2023cramming}, where the authors conduct an in-depth analysis of masked LM training on a single GPU in one day.
+
+While these studies offer valuable insights, they primarily focus on training text models, such as LLMs and masked LMs.
+In the speech domain, similar research has been conducted on self-supervised representation models~\citep{liu2024efficient}, but not on SLMs.
+In this work, we address this gap by focusing on efficient SLM training.
+
+</td><td>
+
+</td></tr>
+<tr><td>
+
+**Generative speech language models** were explored under various setups~\citep{gslm, kharitonov2021text}.
+\citet{gslm} were the first to show how raw and uncurated speech data can be leveraged into building a GSLM system.
+Next,~\citet{borsos2023audiolm} proposed a cascade version using both coarse and fine speech tokens.
+Such a modelling framework opened up a new and promising research direction for processing and modelling spoken data, such as speech resynthesis~\citep{polyak2021speech}, speaking style conversion~\citep{kreuk2021textless,maimon2023dissc}, dialogue modelling~\cite{nguyen2022generative}, speech-to-speech translation~\citep{popuri2022enhanced, peng2024mslm}, etc.
+
+\citet{nachmani2023spoken} proposed augmenting a text LM with continuous speech data to improve spoken question-answering tasks.
+Recently, \citet{park2024long} proposed SLM based on state-space models~\citep{gu2021efficiently} to further push long context-efficient modelling, while ~\citet{lin2024alignslm} proposed to fine-tune SLMs using direct preference optimisation~\citep{rafailov2024dpo} obtained from text LLM rankings.
+
+Similar to text LLMs, training SLMs often demands large-scale datasets.
+For instance, Moshi~\cite{defossez2024moshi} was trained on $7$ million hours of speech data, SpiritLM~\cite{spiritlm} utilized $560k$ hours, and TWIST~\cite{twist} was trained on approximately $150k$.
+Recently, \citet{cuervo2024scaling} introduced the first scaling laws for SLMs, suggesting that achieving comparable performance to text LMs requires three times more tokens.
+In this work, we focus on reducing the computational demands while maintaining performance comparable to leading SLMs.
+
 </td><td>
 
 </td></tr></table>
 
-## 3·Methodology: 方法
+## 3·Setup: 设置
 
 <table><tr><td width="50%">
 
@@ -91,7 +125,7 @@ We open-source all code, models, training recipes, and synthetic datasets.
 
 </td></tr></table>
 
-## 4·Experiments: 实验
+## 4·Investigations: 研究
 
 <table><tr><td width="50%">
 
@@ -99,7 +133,7 @@ We open-source all code, models, training recipes, and synthetic datasets.
 
 </td></tr></table>
 
-## 5·Results: 结果
+## 5·Final Recipe: 最终配方
 
 <table><tr><td width="50%">
 
@@ -107,7 +141,15 @@ We open-source all code, models, training recipes, and synthetic datasets.
 
 </td></tr></table>
 
-## 6·Conclusions: 结论
+## 6·Increasing Compute: 增加计算
+
+<table><tr><td width="50%">
+
+</td><td>
+
+</td></tr></table>
+
+## 7·Conclusions: 结论
 
 <table><tr><td width="50%">
 
